--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
 
-                <a class="apresentacao__links__navegacao" href="https://instagram.com/juliavieiras10">
+                <a class="apresentacao__links__navegacao" href="https://instagram.com/Samuelbp10">
                     <img src="./assets/instagram.png" alt="Logo Instagram">Instagram</a>
 
-                <a class="apresentacao__links__navegacao" href="https://instagram.com/samuelbp10">
+                <a class="apresentacao__links__navegacao" href="https://github.com/Samuelbp10/">
                     <img src="./assets/github.png" alt="logo Github">GitHub</a>
 
-                <a class="apresentacao__links__navegacao" href="https://instagram.com/samuelbp10">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/samuel-braga-0619b2335/">
                     <img src="./assets/linkedin.png" alt="Logo Linkedin">Linkedin</a>
 
             </div>
