troquei o link do instagram

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
 
-                <a class="apresentacao__links__navegacao" href="https://instagram.com/Samuelbp10">
+                <a class="apresentacao__links__navegacao" href="https://instagram.com/juliavieiras10">
                     <img src="./assets/instagram.png" alt="Logo Instagram">Instagram</a>
 
                 <a class="apresentacao__links__navegacao" href="https://github.com/Samuelbp10/">
