atualizando novamente o link

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
 
-                <a class="apresentacao__links__navegacao" href="https://instagram.com/juliavieiras10">
+                <a class="apresentacao__links__navegacao" href="https://instagram.com/samuelbp10">
                     <img src="./assets/instagram.png" alt="Logo Instagram">Instagram</a>
 
-                <a class="apresentacao__links__navegacao" href="https://github.com/Samuelbp10/">
+                <a class="apresentacao__links__navegacao" href="https://github.com/samuelbp10/">
                     <img src="./assets/github.png" alt="logo Github">GitHub</a>
 
                 <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/samuel-braga-0619b2335/">
